Having errors in login again.. nkt.. NoneType object? Time to debug, still running on my TRY branch..

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -58,7 +58,7 @@
         </div>
     </hr>
         <div class="all-pitches">
-            <span style="color:gainsboro;">All pitches are displayed below</span>
+            <span style="color:gainsboro;">View Pitches</span>
                 <hr> 
                 {{macro.displayPitches(pitches)}}
             
