--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,39 +11,40 @@
     <div class = "container">
         <div class="row">
             <h1 class="title">PITCH-IT</h1>
-        </div>
+            <h2>Inspiration CAN be shared...</h2>
+
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3"> 
-                    <a href="{{url_for('main.interview')}}" class="categories">
+                    <a href="{{url_for('main.Creative_Ideas')}}" class="categories">
                         <br>
-                        <h2>Inteview Pitches</h2>
+                        <h2>Creative Ideas/h2>
                     </a>
                     <br>
-                    <a href="{{url_for('main.pick_up_line')}}" style="font-family: 'Joti One', cursive; font-size:20px;">
+                    <a href="{{url_for('main.Funny_Stories')}}">
                         <br>
-                        Pick Up Lines
+                        <h2>Funny Stories</h2>
                     </a>
                     <br>
-                    <a href="{{url_for('main.promotion')}}" style="font-family: 'Joti One', cursive; font-size:20px;">
+                    <a href="{{url_for('main.Motivational_Speeches')}}">
                         <br>
-                        Promotion Pitches
+                        <h2>Motivational Speeches</h2>  
                     </a>
                     <br>
-                    <a href="{{url_for('main.product')}}" style="font-family: 'Joti One', cursive; font-size:20px;">
+                    <a href="{{url_for('main.Business_Ideas')}}">
                         <br>
-                        Product Pitches
+                        <h2>Business Ideas</h2>
                     </a>
                     <br>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-9">
             <div class="panel">
-                <p style="font-family: 'Bellefair', serif; font-size:20px;">Write your one minute in any of the categories to the left and let other user vote and comment on it.Please also feel free to comment and vote on pitches posted by other people </p>
+                <p>Create you one minute pitch! Remember, keep it short and true..</p>
                 
-                <div style="text-align:center;">
+                <div>
                     <a href="{{url_for('main.new_pitch')}}">
                         <br>
                         <div class="container">
                             <a href="{{url_for('main.index')}}">
-                                    <button type="button" class="btn btn-primary btn-sm" style="margin-bottom:10px;">
+                                    <button type="button" class="btn btn-primary btn-sm">
                                             <span class="glyphicon glyphicon-chevron-left" ></span> Back
                                     </button>
                             </a>
@@ -55,6 +56,7 @@
             
             </div>
             
+        </div>
         </div>
     </hr>
         <div class="all-pitches">
