--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -7,12 +7,14 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/" style="color:black; font-weight:bolder;"> <a href="/" class="btn btn-lg">
+            <a class="navbar-brand" href="/"> <a href="/" class="btn btn-lg">
                 <span class="glyphicon glyphicon-home"></span> Home
               </a></a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
+
+
                 {% if current_user.is_authenticated %}
                 <li><a href="{{url_for('main.profile',uname=current_user.username)}}" style="color:black; font-weight:bolder;">Profile</a></li>
                 <li><a href="{{url_for('main.profile',uname=current_user.username)}}" style="color:black; font-weight:bolder;">{{current_user.username}}</a></li>
