Starting to look like something..:) still routing issues

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -9,10 +9,32 @@ font-family: 'Indie Flower', cursive; */
 
 .categories{
     font-family: 'Indie Flower', cursive;
-    background-color: aqua;
 }
 
 .title {
     font-family: 'Dosis', sans-serif;
     size: 30px;
+    text-align: center;
+}
+
+.main_page{
+    text-align: center;
+    border-radius: 2%;
+    padding: 1%;
+}
+
+
+.register_main{
+    text-align: center;
+    border-radius: 2%;
+    padding: 1%;
+    font-family: 'Dosis', sans-serif;
+}
+
+.header_font{
+    font-family: 'Dosis', sans-serif;
+}
+
+.bordered{
+    border: 2px solid blue;
 }
