--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,5 +1,9 @@
 {% extends 'auth/login_base.html'%}
 {% import 'bootstrap/wtf.html' as wtf%}
+{% block styles%}
+{{ super() }}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+{% endblock %}
 
 {% block content%}
 
