--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,12 +1,22 @@
 {% extends 'bootstrap/base.html'%}
 {% import 'bootstrap/wtf.html' as wtf%}
 
+{% block styles%}
+{{ super() }}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+{% endblock %}
+
 {% block content %}
-<div class="col-md-4"> </div>
-<div class="col-md-8">
+<div class="register_main">
+  <h1 class="header_font">Register to PITCH-IT..</h1>
+
+  <div class="jumbotron">
+
+
 
   {{wtf.quick_form(registration_form)}}
 
  </div>
+</div>
 
 {% endblock%}
