--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,13 +1,16 @@
 {% extends 'bootstrap/base.html'%}
-
-Navbar block  
+ 
 {% block navbar %}
 {% include 'navbar.html' %}
 {% endblock %}
 
 {%block styles %}
 {{super()}}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 {{ simplemde.css}}
 {{ simplemde.js }}
 
+
 {% endblock %}
+
+
