--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,45 +2,42 @@
 {% import 'macros.html' as macro%}
 {% import 'bootstrap/wtf.html' as wtf %}
 
-{% block styles%}
-{{ super() }}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-{% endblock %}
-
 {% block content %}
-    <div class = "container">
+    <div class = "container main_page">
         <div class="row">
             <h1 class="title">PITCH-IT</h1>
             <h2>Inspiration CAN be shared...</h2>
 
-        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3"> 
+        <div class="col-md-3 bordered"> 
+            <h1>Browse Pitches:</h1>
                     <a href="{{url_for('main.Creative_Ideas')}}" class="categories">
                         <br>
-                        <h2>Creative Ideas/h2>
+                        <h2>Creative Ideas</h2>
                     </a>
                     <br>
-                    <a href="{{url_for('main.Funny_Stories')}}">
+                    <a href="{{url_for('main.Funny_Stories')}}" class="categories">
                         <br>
                         <h2>Funny Stories</h2>
                     </a>
                     <br>
-                    <a href="{{url_for('main.Motivational_Speeches')}}">
+                    <a href="{{url_for('main.Motivational_Speeches')}}" class="categories">
                         <br>
                         <h2>Motivational Speeches</h2>  
                     </a>
                     <br>
-                    <a href="{{url_for('main.Business_Ideas')}}">
+                    <a href="{{url_for('main.Business_Ideas')}}" class="categories">
                         <br>
                         <h2>Business Ideas</h2>
                     </a>
                     <br>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-9">
-            <div class="panel">
+        <div class="col-md-9">
+            <div class="jumbotron">
                 <p>Create you one minute pitch! Remember, keep it short and true..</p>
-                
                 <div>
                     <a href="{{url_for('main.new_pitch')}}">
+                        <h3>Create a new Pitch..</h3></a>
+
                         <br>
                         <div class="container">
                             <a href="{{url_for('main.index')}}">
@@ -48,10 +45,8 @@
                                             <span class="glyphicon glyphicon-chevron-left" ></span> Back
                                     </button>
                             </a>
-                            {{wtf.quick_form(new_pitch_form)}}
+                          
                         </div>
-                    </a>
-
                 </div>
             
             </div>
