--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -10,6 +10,11 @@
             <a class="navbar-brand" href="/"> <a href="/" class="btn btn-lg">
                 <span class="glyphicon glyphicon-home"></span> Home
               </a></a>
+              <a href="{{url_for('main.index')}}">
+                    <button type="button" class="btn btn-primary btn-sm" style="margin-bottom:10px;">
+                            <span class="glyphicon glyphicon-chevron-left" ></span> Back
+                    </button>
+            </a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -27,3 +32,4 @@
 
     </div>
 </div>
+
