--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -8,6 +8,7 @@
 
 {% block content %}
 <div class="register_main">
+    <img src="{{url_for('static', filename='images/logo_main.png', width=20)}}" />
   <h1 class="header_font">Register to PITCH-IT..</h1>
 
   <div class="jumbotron">
