--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,8 +5,8 @@
 {% block content %}
     <div class = "container main_page">
         <div class="row">
-            <h1 class="title">PITCH-IT</h1>
-            <h2>Inspiration CAN be shared...</h2>
+            <h1 class="title">Pitch It</h1>
+            <h2 class="medium-styled-text">Inspiration CAN be shared...</h2>
 
         <div class="col-md-3 bordered"> 
             <h1>Browse Pitches:</h1>
