--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse" role="navigation" style="background-color:white; border:white;">
+<div class="navbar navbar-inverse" role="navigation" style="background-color:orange; border:white;">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -18,15 +18,13 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-
-
                 {% if current_user.is_authenticated %}
                 <li><a href="{{url_for('main.profile',uname=current_user.username)}}" style="color:black; font-weight:bolder;">Profile</a></li>
                 <li><a href="{{url_for('main.profile',uname=current_user.username)}}" style="color:black; font-weight:bolder;">{{current_user.username}}</a></li>
-                <li><a href="{{url_for('auth.logout')}}" style="color:black; font-weight:bolder;">Sign out</a></li>
+                <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
                 {% else %}
-                <li><a href="{{url_for('auth.login')}}" style="color:black; font-weight:bolder;">Log in</a></li>
-                {%endif%}
+                <li><a href="{{url_for('auth.login')}}>Log in</a></li>
+                {% endif %}
             </ul>
         </div>
 
