--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,4 +1,4 @@
-{% extends 'auth/login_base.html'%}
+{% extends 'base.html'%}
 {% import 'bootstrap/wtf.html' as wtf%}
 {% block styles%}
 {{ super() }}
@@ -8,9 +8,10 @@
 {% block content%}
 
 <div class="container">
-  <div class="row">
-      <h1>PITCH-IT</h1>
-      <h3>Log in to your account..</h3>
+        <img class="logo_main" src="{{url_for('static', filename='images/logo_main.png', width=20)}}" />
+
+    <div class="row">
+      <h3>LOG IN</h3>
 
     <div class="col-md-2"> </div>
 
@@ -28,7 +29,8 @@
       {{ wtf.quick_form(login_form) }}
 
       <div class="well">
-      <p> Don't  have an account?  <a href="{{url_for('auth.register')}}">Register with us..</a></p>
+      <p> Don't  have an account?</p>
+        <a href="{{url_for('auth.register')}}">Register</a>
       </div>
 
     </div>
