--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -16,6 +16,8 @@
 
 
   {{wtf.quick_form(registration_form)}}
+  <a href="{{url_for('auth.terms')}}">View terms and conditions</a>
+
 
  </div>
 </div>
