--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -3,9 +3,10 @@
     {% for pitch in pitches_list %}
       <div class="panel">
           <p>{{pitch.pitch}}</p>
+          <p>{{pitch.category}}</p>
           <br>
-          <a href="{{url_for('main.new_comment',id=pitch.id)}}">Give us your thoughts..</a>&nbsp;&nbsp;|
-          <a href="{{url_for('main.view_comments',id=pitch.id)}}">More comments..</a>&nbsp;&nbsp;|
+          <a href="{{url_for('main.new_comment',id=pitch.id)}}">Give us your thoughts</a>&nbsp;&nbsp;|
+          <a href="{{url_for('main.view_comments',id=pitch.id)}}">View comments</a>&nbsp;&nbsp;|
           <a href="{{url_for('main.new_comment',id=pitch.id)}}">Vote</a>
       </div> 
     {% endfor %}
