--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -23,7 +23,7 @@
                 <li><a href="{{url_for('main.profile',uname=current_user.username)}}" style="color:black; font-weight:bolder;">{{current_user.username}}</a></li>
                 <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
                 {% else %}
-                <li><a href="{{url_for('auth.login')}}>Log in</a></li>
+                <li><a href="{{url_for('auth.login')}}">Log in</a></li>
                 {% endif %}
             </ul>
         </div>
